--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,48 +1,21 @@
 {
   "root": true,
-  "ignorePatterns": ["**/*"],
+  //"ignorePatterns": ["**/*"],
   "plugins": ["@nx", "prettier"],
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {
-        "@nx/enforce-module-boundaries": [
-          "error",
-          {
-            "enforceBuildableLibDependency": true,
-            "allow": [],
-            "depConstraints": [
-              {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
-              }
-            ]
-          }
-        ],
-        "prettier/prettier": [
-          "warn",
-          {
-            "printWidth": 100,
-            "proseWrap": "always",
-            "quoteProps": "as-needed",
-            "semi": false,
-            "tabWidth": 2,
-            "useTabs": false,
-            "endOfLine": "auto",
-            "trailingComma": "es5"
-          }
-        ]
-      }
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"]
     },
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-unused-vars": "warn"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nx/javascript"],
-      "rules": {}
+      "extends": ["plugin:@nx/javascript"]
     },
     {
       "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
