--- a/apps/client-e2e/project.json
+++ b/apps/client-e2e/project.json
@@ -2,6 +2,8 @@
   "name": "client-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/client-e2e/src",
+  "tags": [],
+  "implicitDependencies": ["client"],
   "targets": {
     "e2e": {
       "executor": "@nx/cypress:cypress",
@@ -18,12 +20,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["apps/client-e2e/**/*.{js,ts}"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": [],
-  "implicitDependencies": ["client"]
+  }
 }
