--- a/package.json
+++ b/package.json
@@ -2,18 +2,37 @@
   "name": "@theme-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "private": true,
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@nestjs/cli": "^10.2.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.17",
-    "axios": "^1.0.0",
-    "next": "13.4.1",
+    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/skeleton": "^2.0.27",
+    "antd": "^5.16.2",
+    "axios": "1.6.8",
+    "framer-motion": "^11.0.25",
+    "husky": "^9.0.11",
+    "jwks-rsa": "^3.1.0",
+    "lint-staged": "^15.2.2",
+    "next": "14.0.4",
+    "nextui-cli": "^0.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.4",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.20.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -22,30 +41,32 @@
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/cypress": "17.1.1",
-    "@nx/eslint": "17.1.3",
-    "@nx/eslint-plugin": "17.1.3",
-    "@nx/jest": "17.1.3",
-    "@nx/js": "17.1.3",
-    "@nx/nest": "17.1.3",
-    "@nx/next": "17.1.1",
-    "@nx/node": "17.1.3",
-    "@nx/react": "17.1.1",
-    "@nx/webpack": "17.1.3",
-    "@nx/workspace": "17.1.3",
-    "@swc-node/register": "~1.6.7",
+    "@nx/cypress": "18.2.4",
+    "@nx/eslint": "18.2.4",
+    "@nx/eslint-plugin": "18.2.4",
+    "@nx/jest": "18.2.4",
+    "@nx/js": "18.2.4",
+    "@nx/nest": "18.2.4",
+    "@nx/next": "18.2.4",
+    "@nx/node": "18.2.4",
+    "@nx/react": "18.2.4",
+    "@nx/web": "18.2.4",
+    "@nx/webpack": "18.2.4",
+    "@nx/workspace": "18.2.4",
+    "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
+    "@types/node": "^20.12.11",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
-    "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
+    "cypress": "^13.6.6",
+    "eslint": "8.57.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -57,12 +78,12 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "17.1.3",
+    "nx": "18.2.4",
     "postcss": "8.4.21",
     "prettier": "^2.8.8",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
